✨ feat: Implemented '/auth/password/reset/:token' api
