# backend/src/auth/dto/changePasswordDto.ts
@@ -1,0 +1,11 @@
+import { IsBoolean, IsNotEmpty, IsString, MinLength } from 'class-validator';
+
+export class ChangePasswordDto {
+  @IsString()
+  @IsNotEmpty()
+  @MinLength(8)
+  password: string;
+
+  @IsBoolean()
+  wantToLogOutFromOtherDevices: boolean;
+}
